environments/istio/ambient-demo/gke/helm-deploy-1.20/apps/base/15-namespace-app/virtualservice.yaml

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ingress-gw
  namespace: istio-system
  labels:
    seed: "1695844037132284000"
spec:
  hosts:
    - "*"
  gateways:
  - istio-system/http-gateway
  http:
  - name: "ns-1"
    match:
    - uri:
        exact: "/ns-1"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: hidden-sky.ns-1.svc.cluster.local
        port:
          number: 8080
  - name: "ns-10"
    match:
    - uri:
        exact: "/ns-10"
    route:
    - destination:
        host: solitary-sky.ns-10.svc.cluster.local
        port:
          number: 8080
  - name: "ns-11"
    match:
    - uri:
        exact: "/ns-11"
    route:
    - destination:
        host: throbbing-sunset.ns-11.svc.cluster.local
        port:
          number: 8080
  - name: "ns-12"
    match:
    - uri:
        exact: "/ns-12"
    route:
    - destination:
        host: winter-field.ns-12.svc.cluster.local
        port:
          number: 8080
  - name: "ns-13"
    match:
    - uri:
        exact: "/ns-13"
    route:
    - destination:
        host: cold-surf.ns-13.svc.cluster.local
        port:
          number: 8080
  - name: "ns-14"
    match:
    - uri:
        exact: "/ns-14"
    route:
    - destination:
        host: empty-bird.ns-14.svc.cluster.local
        port:
          number: 8080
  - name: "ns-15"
    match:
    - uri:
        exact: "/ns-15"
    route:
    - destination:
        host: spring-sound.ns-15.svc.cluster.local
        port:
          number: 8080
  - name: "ns-2"
    match:
    - uri:
        exact: "/ns-2"
    route:
    - destination:
        host: cold-bird.ns-2.svc.cluster.local
        port:
          number: 8080
  - name: "ns-3"
    match:
    - uri:
        exact: "/ns-3"
    route:
    - destination:
        host: divine-water.ns-3.svc.cluster.local
        port:
          number: 8080
  - name: "ns-4"
    match:
    - uri:
        exact: "/ns-4"
    route:
    - destination:
        host: dawn-glade.ns-4.svc.cluster.local
        port:
          number: 8080
  - name: "ns-5"
    match:
    - uri:
        exact: "/ns-5"
    route:
    - destination:
        host: spring-surf.ns-5.svc.cluster.local
        port:
          number: 8080
  - name: "ns-6"
    match:
    - uri:
        exact: "/ns-6"
    route:
    - destination:
        host: sparkling-firefly.ns-6.svc.cluster.local
        port:
          number: 8080
  - name: "ns-7"
    match:
    - uri:
        exact: "/ns-7"
    route:
    - destination:
        host: empty-wood.ns-7.svc.cluster.local
        port:
          number: 8080
  - name: "ns-8"
    match:
    - uri:
        exact: "/ns-8"
    route:
    - destination:
        host: shy-sunset.ns-8.svc.cluster.local
        port:
          number: 8080
  - name: "ns-9"
    match:
    - uri:
        exact: "/ns-9"
    route:
    - destination:
        host: still-rain.ns-9.svc.cluster.local
        port:
          number: 8080
---
